@@ -6,6 +6,7 @@
 * Updated code to match lltl library headers.
 * Better integration with system::follow_url() routine.
 * Added automatic style creation from XML schema.
+* Added simple language configuration support by the tk::Schema class.
 - Add custom mouse pointer for fraction actions.
 
 === 0.5.0 ===
